[package]
name = "hw_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hw_rust"
crate_type = ["dylib"]

[dependencies]
bracket-lib = "~0.8.1"
bracket-terminal = "*"
bracket-random = "*"
time = "*"
regex = "*"
json = "*"
jni = "0.19.0"